[package]
name = "sqlrite-journal"
version = "0.14.0"
description = "Local-first journaling desktop app backed by SQLRite (example app)"
authors = ["Joao Henrique Machado Silva <joaoh82@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[[bin]]
name = "sqlrite-journal"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Engine — path-pinned to the workspace root for in-tree development;
# `version = "0.10.1"` is the floor for downstream packagers that take
# the example out of the monorepo. Bump in lockstep with the engine
# release via `scripts/bump-version.sh`.
sqlrite = { package = "sqlrite-engine", path = "../../..", version = "0.14.0" }

tauri = { version = "2", features = [] }
# Dialog plugin powers the "Open…" / "Save As…" / "Export…" pickers.
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
# Mirrors the engine: keep the `ask` feature opt-in at build time so a
# fully-offline build of the journal can drop the LLM dep entirely.
default = ["ask"]
ask = ["sqlrite/ask"]
